--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -34,7 +34,7 @@
 
 @inproceedings{boven:21b,
   title = {Fill the gap: A novel test to elicit nominal plurals in Sign Language of the Netherlands},
-  author = {Boven, Cindy van},
+  author = {van Boven, Cindy},
   publisher = {FEAST. Formal and Experimental Advances in Sign Language Theory},
   volume = {3},
   pages = {56--67},
@@ -46,7 +46,7 @@
 
 @article{boven:21c,
   title = {Habituals in Sign Language of the Netherlands: A corpus-based study},
-  author = {Boven, Cindy van and Oomen, Marloes},
+  author = {van Boven, Cindy and Oomen, Marloes},
   journal = {Linguistics in Amsterdam},
   volume = {14},
   number = {1},
@@ -54,6 +54,35 @@
   year = {2021},
   url = {https://www.researchgate.net/profile/Marloes-Oomen/publication/349685298_Habituals_in_Sign_Language_of_the_Netherlands_A_corpus-based_study/links/603cad7d4585158939d99668/Habituals-in-Sign-Language-of-the-Netherlands-A-corpus-based-study.pdf},
   abstract = {In this corpus-based study on habituals in Sign Language of the Netherlands (NGT), we investigate the manual and non-manual marking of habituality in naturalistic data. We show that both reduplication of the predicate and adverbials with a habitual flavor are used in habitual contexts, but both of these manual markers appear to be optional. As for non-manual markers, even more variation is attested; left-to-right head and body movements and narrowed eyes are the most frequently occurring non-manuals in habitual contexts but are by no means obligatory. The findings contrast with the results reported in two previous studies on habituals in NGT (Hoiting & Slobin 2001; Oomen 2016), which can be partially explained by the fact that these studies used elicitation methods. As such, the present study underscores the importance of using a combination of different methods in investigating linguistic phenomena.}
+}
+
+@incollection{boven:23a,
+  title = {Negative Concord in Sign Language of the Netherlands: a journey through a corpus},
+  author = {van Boven, Cindy and Oomen, Marloes and Pfau, Roland and Rusch, Lotte},
+  publisher={John Benjamins Publishing Company},
+  booktitle = {Advances in sign language corpus linguistics},
+  pages = {30--65},
+  year = {2023},
+  url = {https://doi.org/10.1075/scl.108.02van},
+  doi = {10.1075/scl.108.02van},
+  keywords = {Corpus NGT, Cross-modal typology, Doubling, Negation, Negative Concord, Variation},
+  abstract = {In a Negative Concord (NC) configuration, two negative elements co-occur in a clause but the polarity of that clause still remains negative. NC involving two manual negators has been observed in various sign languages, but relevant examples are usually presented in the context of broader investigations on negation in a particular sign language. Also, examples are not usually drawn from natural discourse. In this chapter, we offer the first comprehensive study on NC in a single sign language, namely, the Sign Language of the Netherlands (NGT), based entirely on corpus data. We find that NC is attested in NGT, but that it is optional and rather infrequent. First, our contribution is of a typological nature, as we distinguish different types of NC and compare our corpus-based results with those reported for other signed and spoken languages. Second, we describe in detail our “journey”, that is, our search procedure and inclusion criteria, thereby offering methodological guidelines for future endeavors.}
+}
+
+@article{boven:23b,
+  title = {Nominal plurals in Sign Language of the Netherlands: Accounting for allomorphy and variation},
+  author = {van Boven, Cindy and Hamann, Silke and Pfau, Roland},
+  journal = {Glossa: a journal of general linguistics},
+  volume = {8},
+  number = {1},
+  pages = {1--47},
+  year = {2023},
+  url = {https://www.glossa-journal.org/article/id/9686/},
+  doi = {https://doi.org/10.16995/glossa.9686},
+  keywords = {Allomorphy, Corpus, Plural reduplication, Sign Language of the Netherlands, Stochastic OT, Variation},
+  abstract = {In both signed and spoken languages, reduplication is a common process in the formation of morphologically complex structures, expressing, e.g., plurality and certain aspectual meanings. A framework in which spoken language reduplication has been formalized frequently is Optimality Theory (OT). While an important attribute of OT-constraints is their universality, to date, the question to what extent such constraints are modality-independent, and thus work for sign language reduplication as well, remains largely unanswered. In the present study, we offer the first OT-formalization of plural reduplication in Sign Language of the Netherlands (NGT). The NGT-data reveal that this language features different plural allomorphs, the choice of which depends on phonological properties of the base noun. However, we also identify variation, e.g., all noun types allow for zero marking.
+  
+  In our formalization, we aim to introduce constraints that are maximally modality-independent, using constraint types that have previously been proposed for spoken language reduplication. Our formalization is the first to take into account base-reduplicant faithfulness for a sign language, and also the first to account for variation in sign language data by employing stochastic OT, whereby some noise is added to the ranking value of each constraint at evaluation time. Evaluating the modality-(in)dependence of our proposed account suggests that the types of constraints we employ as well as the evaluation in the spirit of stochastic OT are not specific to a modality, while the featural implementation is inevitably modality-dependent.}
 }
 
 @inproceedings{khristoforova:21,
@@ -68,6 +97,23 @@
   url = {https://www.signlab-amsterdam.nl/publications/khristoforova21.pdf},
   abstract = {We describe basic morphosyntactic and semantic properties of question-answer pairs(QAPs) collected from the online corpus of Russian Sign Language (RSL). We identified two classes of QAPs: classical and discourse QAPs, which are different in the semantic relation between the question and answer parts. We discovered that non-manual marking and word order in both types of QAPs are different from other constructions involving wh-signs, namely regular questions and free relative clauses. Guided by the similarity between non-manual marking of QAPs and role shift marking, we hypothesize on a possible grammaticalization process connecting the two constructions}
 }
+
+@article{Khristoforova:23,
+   author = {Khristoforova, Evgeniia},
+   title = {Subject agreement in control and modal constructions in Russian Sign Language: Implications for the hierarchy of person features"} 
+   journal= {Sign Language & Linguistics},
+   year = {2023},
+   volume = {26},
+   number = {1},
+   pages = {64-116},
+   doi = {https://doi.org/10.1075/sll.21005.khr},
+   url = {https://www.jbe-platform.com/content/journals/10.1075/sll.21005.khr},
+   publisher = {John Benjamins},
+   issn = {1387-9316},
+   type = {Journal Article},
+   keywords = {Sign language, Person feature, Finiteness, Control clause, Complement clause, Russian Sign Language, Verbal agreement},
+   abstract = {The present research combines three fields of inquiry in sign language linguistics: verbal agreement, person features, and syntactic complexity. These topics have previously been addressed in isolation, but little is known about their interaction. This study attempts to fill this gap by investigating subject agreement in complement clauses in Russian Sign Language. By means of corpus investigation and grammaticality judgments, I found that subject agreement in clausal complements of the control predicates <span class="jp-small">try, love, want, begin</span>, and modal <span class="jp-small">can</span> may be deficient – in particular, it can be reduced to the forms identical to first-person marking even in the case of a third-person subject controller. Deficient subject agreement in complement clauses is thus reminiscent of non-finite verbal forms in spoken languages. I further argue that the choice of first-person forms in deficient agreement reveals a default status of first person in sign languages, which is consistent with proposals regarding the modality-specific properties of first-person reference in these languages.},
+  }
 
 @article{kimmelman:20,
   title = {Argument structure of classifier predicates in Russian Sign Language},
@@ -105,7 +151,7 @@
 
 @article{lint:20,
   title = {From meaning to form and back in American Sign Language verbal classifier morphemes},
-  author = {Lint, Vanja de},
+  author = {de Lint, Vanja},
   publisher = {Edinburgh University Press},
   journal = {Word Structure},
   volume = {13},
@@ -178,7 +224,7 @@
 
 @incollection{pfau:21c,
   title = {Pink sign: Identity challenges, choices, and changes among elderly Deaf homosexuals in the Netherlands},
-  author = {Pfau, Roland and Kampen, Annemieke van and Harterink, Menno},
+  author = {Pfau, Roland and van Kampen, Annemieke and Harterink, Menno},
   booktitle = {Our Lives--Our Stories: Life Experiences of Elderly Deaf People},
   publisher = {De Gruyter Mouton},
   volume = {14},
@@ -286,7 +332,7 @@
 
 @inproceedings{Gemert:22,
   title = {First Steps Towards a Signing Avatar for Railway Travel Announcements in the {Netherlands}},
-  author = {Gemert, Britt van and Cokart, Richard and Esselink, Lyke and Meulder, Maartje de and Sijm, Nienke and Roelofsen, Floris},
+  author = {van Gemert, Britt and Cokart, Richard and Esselink, Lyke and Meulder, Maartje de and Sijm, Nienke and Roelofsen, Floris},
   booktitle = {Proceedings of the 7th International Workshop on Sign Language Translation and Avatar Technology (SLTAT): The Junction of the Visual and the Textual: Challenges and Perspectives},
   publisher = {European Language Resources Association},
   pages = {109--116},
@@ -337,7 +383,7 @@
 
 @mastersthesis{gemert:22,
   title = {Co-designing a Sign Language Avatar for Railway Announcements},
-  author = {Gemert, Britt van},
+  author = {van Gemert, Britt},
   school = {Radboud University},
   year = {2022},
   url = {https://www.signlab-amsterdam.nl/publications/van_Gemert.pdf},
@@ -387,7 +433,7 @@
 
 @unpublished{Vijver:21,
   title = {Use of a modern avatar for sign language synthesis: Hand animations and the signing space},
-  author = {Vijver, Matthijs van de},
+  author = {van de Vijver, Matthijs},
   year = {2021},
   url = {https://dspace.uba.uva.nl/bitstreams/128a1797-658b-49c2-8562-9cd1d3f81872/download},
   keywords = {bachelorsthesis},
@@ -398,7 +444,7 @@
 
 @unpublished{Hofwegen:21,
   title = {Modern avatar simulation for sign language synthesis: Hand configurations of the SiGML},
-  author = {Hofwegen, Mark van},
+  author = {van Hofwegen, Mark},
   year = {2021},
   url = {https://dspace.uba.uva.nl/bitstreams/473c469e-4102-4133-9e53-e377263d5782/download},
   keywords = {bachelorsthesis},
@@ -504,14 +550,115 @@
   abstract = {Prior work with hearing children acquiring a spoken language as their first language shows that spatial language and cognition are related systems and spatial language use predicts spatial memory. Here, we further investigate the extent of this relationship in signing deaf children and adults and ask if late sign language exposure, as well as the frequency and the type of spatial language use that might be affected by late exposure, modulate subsequent memory for spatial relations. To do so, we compared spatial language and memory of 8-year-old late-signing children (after 2 years of exposure to a sign language at the school for the deaf) and late-signing adults to their native-signing counterparts. We elicited picture descriptions of Left-Right relations in Turkish Sign Language (Türk İşaret Dili) and measured the subsequent recognition memory accuracy of the described pictures. Results showed that late-signing adults and children were similar to their native-signing counterparts in how often they encoded the spatial relation. However, late-signing adults but not children differed from their native-signing counterparts in the type of spatial language they used. However, neither late sign language exposure nor the frequency and type of spatial language use modulated spatial memory accuracy. Therefore, even though late language exposure seems to influence the type of spatial language use, this does not predict subsequent memory for spatial relations. We discuss the implications of these findings based on the theories concerning the correspondence between spatial language and cognition as related or rather independent systems.}
 }
 
-@unpublished{esselink:22,
+@inproceedings{hollain:23a,
+  author = {Hollain, Natalie and Larson, Martha and Roelofsen, Floris},
+  booktitle={2023 IEEE International Conference on Acoustics, Speech, and Signal Processing Workshops (ICASSPW)}, 
+  title={Distractor-Based Evaluation of Sign Spotting}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1-5},
+  doi={10.1109/ICASSPW59220.2023.10193484},
+  url = {https://doi.org/10.1109/ICASSPW59220.2023.10193484},
+  keywords = {Sign spotting, Evaluation, Distractors},
+  abstract = {Sign spotting is a subtask of sign language processing in which we determine when a given target sign occurs in a given sign sequence. This paper proposes a method for evaluating sign spotting systems, which we argue to be more reflective of the degree to which a system would satisfy the user’s requirements in practice than previously proposed evaluation methods. To deal with an incomplete ground truth, we introduce the concept of distractors: signs which are similar to the target sign according to a given distance measure. We assume that the performance of a sign spotting model when distinguishing a given target sign from the associated distractors will reflect the performance of the model on the complete ground truth. We develop a sign spotting model to demonstrate our evaluation method.}
+}
+
+@inproceedings{hollain:23b,
+    title = {Analyzing the Potential of Linguistic Features for Sign Spotting: A Look at Approximative Features},
+    author = {Hollain, Natalie and Larson, Martha  and Roelofsen, Floris},
+    booktitle = {Proceedings of the Second International Workshop on Automatic Translation for Signed and Spoken Languages},
+    month = {jun},
+    year = {2023},
+    address = {Tampere, Finland},
+    publisher = {European Association for Machine Translation},
+    url = {https://aclanthology.org/2023.at4ssl-1.1},
+    pages = {1--10},
+    abstract = {Sign language processing is the field of research that aims to recognize, retrieve, and spot signs in videos. Various approaches have been developed, varying in whether they use linguistic features and whether they use landmark detection tools or not. Incorporating linguistics holds promise for improving sign language processing in terms of performance, generalizability, and explainability. This paper focuses on the task of sign spotting and aims to expand on the approximative linguistic features that have been used in previous work, and to understand when linguistic features deliver an improvement over landmark features. We detect landmarks with Mediapipe and extract linguistically relevant features from them, including handshape, orientation, location, and movement. We compare a sign spotting model using linguistic features with a model operating on landmarks directly, finding that the approximate linguistic features tested in this paper capture some aspects of signs better than the landmark features, while they are worse for others.},
+}
+
+@mastersthesis{hollain:23c,
+  title = {Towards Explainable Sign Spotting Systems: an Exploration of Approximative Linguistic Features and Evaluation Methods},
+  author = {Hollain, Natalie},
+  school = {Radboud University},
+  year = {2023},
+  url = {https://www.signlab-amsterdam.nl/publications/Natalie-Hollain-thesis.pdf},
+  abstract = {This research project carried out an initial exploration into how sign spotting, the task of detecting when a target sign occurs in a given video, can be performed in a more explainable manner. Explainability demands that a system is correct, robust and interpretable to humans [1], [2]. Inspired by domain knowledge being used to increase the explainability and interpretability of systems in other domains [3], [4], we investigate the possibility of using a knowledge-based approach for sign spotting. 
+  
+  One manner in which knowledge about sign language can be incorporated into sign language systems is through linguistic insights. Current sign spotting systems typically do not make use of such knowledge [5], thus limiting their interpretability. Similarly, evaluation methods for sign spotting do not draw on linguistic knowledge, resulting in a lack of explainability since they fail to robustly estimate model performance given an incomplete ground truth. Updates to the known ground truth, in particular the addition of challenging sign annotations, can significantly alter the estimated performance. Moreover, current evaluations do not reflect user expectations for sign spotting systems because spottings are allowed to occur after a relevant segment has already started. Users thus have to put in effort, such as rewinding the video, to watch the full relevant segment, which was found to not reflect what users expect [6]. 
+  
+  The goal of this thesis is to address these limitations using a knowledge-based approach. We incorporate linguistic knowledge about sign language into a sign spotting system and evaluation method. We aim to enhance explainability by enabling a sign spotting analysis based on linguistic insights. Furthermore, we develop linguistic features to ensure our model uses knowledge-based inputs as the basis for its decision-making. In this way, we hope to increase the explainability of current methods. 
+  
+  To address the need for explainable sign spotting systems, we implemented features for a sign spotting model that approximate the basic phonological properties of signs, including handshape, orientation, location and movement [7], [8]. Our features are extracted from landmarks, which are keypoints in the body, such as the fingertips and shoulders, that we detected using a landmark detection tool. As far as we are aware, we are the first to implement a sign spotting model which extracts such features from landmarks. By taking into account the basic four phonological properties, we aim to create explainable sign representations for our model to encode. As a result, it is possible to perform a failure analysis for our model that is facilitated by the linguistic features.
+  
+  To address the need for explainable evaluation methods for sign spotting, we developed an evaluation that is rooted in the concept of tolerance to irrelevance (TTI) [9]. TTI builds on the assumption that users, given an entry point in a video or audio stream, keep watching or listening until their tolerance to irrelevant content is reached. Through this means, our evaluation method reflects the effort it takes for users to use a sign spotting system.
+  
+  However, TTI, like existing sign spotting evaluations, relies on a full ground truth to reliably determine a model’s performance, which may not be available for a sign spotting dataset. We address this limitation by using a novel approach that uses only the most challenging known cases to assess our model performance. These hardest cases are called distractors, which we define as those signs that are most similar to the target sign based on a distance measure. In our work, we develop a novel linguistic distance measure to determine the similarity between signs. Through the usage of these distractors, we estimate the performance for the full ground truth based solely on the hardest cases from the known ground truth, and assume that this makes our performance estimation robust to the addition of new annotations. We validated this assumption by investigating the effects of updates to the annotations on the performance estimates by our distractor-based evaluation compared to a baseline evaluation that uses random, as opposed to hard, cases. Our results show that the distractor-based evaluations provides a more conservative estimate of the performance of a model and is comparably robust to changes in the annotations compared to the baseline.
+  
+  We validated our linguistic features using an empirical analysis, where we compared the effectiveness of a non-linguistic baseline that used landmarks directly, to a model using our more explainable, linguistically motivated features that are extracted from landmarks. Moreover, we investigated whether a combination of linguistic and baseline landmark features would result in better performance. The conditions were compared through the use of our distractor-based evaluation. We determined that the combination of the features provided the best performance at the cost of linguistic representativeness.}
+}
+
+@mastersthesis{esselink:23a,
+  title = {Computer Vision and Machine Learning for the Analysis of Non-Manual Markers in Biased Polar Questions in Sign Language of the Netherlands},
+  author = {Esselink, Lyke},
+  school = {Radboud University},
+  year = {2023},
+  url = {https://www.signlab-amsterdam.nl/publications/Master_Thesis_Lyke_Esselink.pdf},
+  abstract = {This research project carried out a methodological exploration of the application of Computer Vision (CV) technologies for gathering data for sign language research, and of the application of Machine Learning (ML) techniques to analyse such data. In order to explore these methods, we applied them to the specific domain of analysing prototypical facial expressions for question marking in Sign Language of the Netherlands (NGT), otherwise referred to as non-manual markers (NMMs). Typically, the literature on this subject describes only one way in which questions are marked. However, there is more variation in the NMM of polar questions than is generally acknowledged in the literature. This research project aims to investigate if bias can account for part of this variation in NMM of polar questions in Sign Language of the Netherlands (NGT). We hypothesized that speaker bias could account for some of these variations in facial expressions, and that there are multiple variations with restrictions relating to applicability in specific contexts. Data was elicited in an experiment through role-play type conversations between participants and confederates. A 3D depth camera was used to measure engagement of 61 facial features, and the ML method clustering was used to find prototypical facial expressions in the data. We found two overarching prototypical facial expressions for marking polar questions in NGT. One included raised eyebrows and eyes wide open, whereas the other included furrowed eyebrows and squinted eyes. Further, we found several variations within these two facial expressions, varying in feature intensity and in additional non-manual markers such as a mouth frown. We found two definite constraints of these facial expressions relating to their applicability. The first was that facial expressions with raised eyebrows do not occur in contexts in which a person holds a positive prior belief and is subsequently presented with negative contextual evidence. The second constraint was that facial expressions involving significantly frowning mouth do not occur in the beginning of a question, but only in the middle and end. Future work includes further examination of these clusters by crossing contexts and temporal windows to investigate the temporal development of these facial expressions and whether further constraints can be found.}
+}
+
+@inproceedings{esselink:23b,
+  author = {Esselink, Lyke and Oomen, Marloes and Roelofsen, Floris},
+  booktitle={2023 IEEE International Conference on Acoustics, Speech, and Signal Processing Workshops (ICASSPW)}, 
+  title={Truedepth Measurements of Facial Expressions: Sensitivity to the Angle Between Camera and Face}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1-5},
+  doi={10.1109/ICASSPW59220.2023.10193107},
+  url = {https://doi.org/10.1109/ICASSPW59220.2023.10193107},
+  keywords = {Facial expressions, Depth-sensing cameras},
+  abstract = {Facial expressions play an important role in communication, especially in sign languages. Linguistic analysis of the exact contribution of facial expressions, as well as the creation of realistic conversational avatars, especially sign language avatars, requires accurate measurements of the facial expressions of humans while engaged in linguistic interaction. Several recent projects have employed a TrueDepth camera to make such measurements. The present paper investigates how reliable this technique is. In particular, we consider the extent to which the obtained measurements are affected by the angle between the camera and the face. Overall, we find that there are generally significant, and often rather substantial differences between measurements from different angles. However, when the measured facial features are highly activated, measurements from different angles are generally strongly correlated.}
+}
+
+@unpublished{esselink:23c,
+  author = {Esselink, Lyke and Roelofsen, Floris and Oomen, Marloes},
+  title = {Exploring new methods for measuring, analyzing, and visualizing facial expressions},
+  year = {2023},
+  keywords = {Facial expressions, Depth-sensing cameras, Clustering, Visualization},
+  url = {https://www.signlab-amsterdam.nl/publications/FEAST_methods_measuring_analyzing_visualizing_facial_expressions.pdf},
+  abstract = {We explore new methods for measuring, analyzing, and visualizing facial expressions and demonstrate the utility of these methods in a case study on polar questions in Sign Language of the Netherlands.},
+  note = {Publication forthcoming in FEAST 2023 proceedings.}
+}
+
+@unpublished{esselink:23d,
   author = {Esselink, Lyke and Roelofsen, Floris and Dotla{\v{c}}il, Jakub and Mende-Gillings, Shani and Meulder, Maartje de and Sijm, Nienke and Smeijers, Anika},
   title = {Exploring automatic text-to-sign translation in a healthcare setting},
-  year = {2022},
+  year =      {Forthc.},
   keywords = {manuscript},
   url = {https://www.signlab-amsterdam.nl/publications/Esselink22.pdf},
   abstract = {Communication between healthcare professionals and deaf patients has been particularly challenging during the COVID-19 pandemic. We have explored the possibility to automatically translate phrases that are frequently used in the diagnosis and treatment of hospital patients, in particular phrases related to COVID-19, from Dutch or English to Dutch Sign Language (NGT). The prototype system we developed displays translations either by means of pre-recorded videos featuring a deaf human signer (for a limited number of sentences) or by means of animations featuring a computer-generated signing avatar (for a larger, though still restricted number of sentences). We evaluated the comprehensibility of the signing avatar, as compared to the human signer. We found that, while individual signs are recognized correctly when signed by the avatar almost as frequently as when signed by a human, sentence comprehension rates and clarity scores for the avatar are substantially lower than for the human signer. We identify a number of concrete limitations of the JAsigning avatar engine that underlies our system. Namely, the engine currently does not offer sufficient control over mouth shapes, the relative speed and intensity of signs in a sentence (prosody), and transitions between signs. These limitations need to be overcome in future work for the engine to become usable in practice.},
   note = {Unpublished.}
+}
+
+@unpublished{oomen:23a,
+  author = {Oomen, Marloes and Roelofsen, Floris},
+  title = {Biased polar question forms in Sign Language of the Netherlands (NGT): Two functions of headshake},
+  year = {2023},
+  keywords = {Sign Language of the Netherlands (NGT), polar questions, bias, headshake},
+  url = {https://www.signlab-amsterdam.nl/publications/FEAST_2023_headshake_in_biased_polar_questions_in_NGT.pdf},
+  abstract = {We identify several polar question forms in Sign Language of the Netherlands (NGT) through a production experiment in which we manipulate two types of biases: (i) the prior expectations of the person asking the question, and (ii) the evidence available in the immediate context of utterance. Our analysis in the present paper focuses on forms involving headshake. We find that in some cases headshake expresses negation, as ex- pected, but in other cases it fulfils another function, namely, it is part of a sentence-final phrase either expressing uncertainty or signalling a request for a response from the ad- dressee, or possibly both at the same time. We further observe that each question form has a distinct ‘bias profile’, indicating a certain combination of prior expectations and contextual evidence. Besides these empirical findings, our study also makes a method- ological contribution: our experimental design could be used in future work to identify polar question forms with different bias profiles in sign languages other than NGT, as well as visual cues accompanying polar questions with different bias profiles in spoken languages.},
+  note = {Publication forthcoming in FEAST 2023 proceedings.}
+}
+
+@incollection{oomen:23b,
+    author =    {Marloes Oomen and Lyke Esselink and Tobias de Ronde and Floris Roelofsen},
+    year =      {Forthc.},
+    title =     {First steps towards a procedure for annotating non-manual markers in sign languages},
+    booktitle = {NELS53 Proceedings},
+    editor =    {Suet-Ying Lam and Satoru Ozaki},
+    url = {https://www.signlab-amsterdam.nl/publications/NELS53_Proceedings_Oomen.pdf},
+    abstract = {We report on the development, application, and evaluation of a procedure for annotating non-manual markers (NMM) in experimentally obtained sign language data. We also share resources to enable other researchers investigating NMM in sign languages or multimodal communication to utilize the annotation protocol we developed in their own research.}
 }
 
 @article{motamedi:22,
