--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -34,7 +34,7 @@
 
 @inproceedings{boven:21b,
   title = {Fill the gap: A novel test to elicit nominal plurals in Sign Language of the Netherlands},
-  author = {van Boven, Cindy},
+  author = {Boven, Cindy van},
   publisher = {FEAST. Formal and Experimental Advances in Sign Language Theory},
   volume = {3},
   pages = {56--67},
@@ -46,7 +46,7 @@
 
 @article{boven:21c,
   title = {Habituals in Sign Language of the Netherlands: A corpus-based study},
-  author = {van Boven, Cindy and Oomen, Marloes},
+  author = {Boven, Cindy van and Oomen, Marloes},
   journal = {Linguistics in Amsterdam},
   volume = {14},
   number = {1},
@@ -58,7 +58,7 @@
 
 @incollection{boven:23a,
   title = {Negative Concord in Sign Language of the Netherlands: a journey through a corpus},
-  author = {van Boven, Cindy and Oomen, Marloes and Pfau, Roland and Rusch, Lotte},
+  author = {Boven, Cindy van and Oomen, Marloes and Pfau, Roland and Rusch, Lotte},
   publisher={John Benjamins Publishing Company},
   booktitle = {Advances in sign language corpus linguistics},
   pages = {30--65},
@@ -71,7 +71,7 @@
 
 @article{boven:23b,
   title = {Nominal plurals in Sign Language of the Netherlands: Accounting for allomorphy and variation},
-  author = {van Boven, Cindy and Hamann, Silke and Pfau, Roland},
+  author = {Boven, Cindy van and Hamann, Silke and Pfau, Roland},
   journal = {Glossa: a journal of general linguistics},
   volume = {8},
   number = {1},
@@ -151,7 +151,7 @@
 
 @article{lint:20,
   title = {From meaning to form and back in American Sign Language verbal classifier morphemes},
-  author = {de Lint, Vanja},
+  author = {Lint, Vanja de},
   publisher = {Edinburgh University Press},
   journal = {Word Structure},
   volume = {13},
@@ -224,7 +224,7 @@
 
 @incollection{pfau:21c,
   title = {Pink sign: Identity challenges, choices, and changes among elderly Deaf homosexuals in the Netherlands},
-  author = {Pfau, Roland and van Kampen, Annemieke and Harterink, Menno},
+  author = {Pfau, Roland and Kampen, Annemieke van and Harterink, Menno},
   booktitle = {Our Lives--Our Stories: Life Experiences of Elderly Deaf People},
   publisher = {De Gruyter Mouton},
   volume = {14},
@@ -332,7 +332,7 @@
 
 @inproceedings{Gemert:22,
   title = {First Steps Towards a Signing Avatar for Railway Travel Announcements in the {Netherlands}},
-  author = {van Gemert, Britt and Cokart, Richard and Esselink, Lyke and Meulder, Maartje de and Sijm, Nienke and Roelofsen, Floris},
+  author = {Gemert, Britt van and Cokart, Richard and Esselink, Lyke and Meulder, Maartje de and Sijm, Nienke and Roelofsen, Floris},
   booktitle = {Proceedings of the 7th International Workshop on Sign Language Translation and Avatar Technology (SLTAT): The Junction of the Visual and the Textual: Challenges and Perspectives},
   publisher = {European Language Resources Association},
   pages = {109--116},
@@ -383,7 +383,7 @@
 
 @mastersthesis{gemert:22,
   title = {Co-designing a Sign Language Avatar for Railway Announcements},
-  author = {van Gemert, Britt},
+  author = {Gemert, Britt van},
   school = {Radboud University},
   year = {2022},
   url = {https://www.signlab-amsterdam.nl/publications/van_Gemert.pdf},
@@ -433,7 +433,7 @@
 
 @unpublished{Vijver:21,
   title = {Use of a modern avatar for sign language synthesis: Hand animations and the signing space},
-  author = {van de Vijver, Matthijs},
+  author = {Vijver, Matthijs van de},
   year = {2021},
   url = {https://dspace.uba.uva.nl/bitstreams/128a1797-658b-49c2-8562-9cd1d3f81872/download},
   keywords = {bachelorsthesis},
@@ -444,7 +444,7 @@
 
 @unpublished{Hofwegen:21,
   title = {Modern avatar simulation for sign language synthesis: Hand configurations of the SiGML},
-  author = {van Hofwegen, Mark},
+  author = {Hofwegen, Mark van},
   year = {2021},
   url = {https://dspace.uba.uva.nl/bitstreams/473c469e-4102-4133-9e53-e377263d5782/download},
   keywords = {bachelorsthesis},
